# wrpc

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
wrpc-macro/: Cargo.toml
wrpc-macro/src/: argument.rs  attr.rs  codegen.rs  lib.rs  test.rs
wrpc-macro/tests/: axum.rs
