[package]
name = "wrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrpc-macro = { path = "wrpc-macro" }

[dev-dependencies]
serde = "1"
serde_json = "1"
serde_qs = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = "0.6"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
reqwasm = "0.5"

[workspace]
members = [
    ".",
    "wrpc-macro"
]
